Validate the HTML

--- a/experience.html
+++ b/experience.html
@@ -32,21 +32,21 @@
                     <span>Treehouse</span>
                     <p>Front End Web Development Techdegree</p>
                     <a href="https://teamtreehouse.com/techdegree" target="_blank">
-                        <img src="images/treehouse.png">
+                        <img src="images/treehouse.png" alt="Treehouse logo">
                     </a>
                 </li>
                 <li class="course">
                     <span>Udemy</span>
                     <p>The Complete Web Development Course 2.0</p>
                     <a href="https://www.udemy.com/the-complete-web-developer-course-2/" target="_blank">
-                        <img src="images/udemy.png">
+                        <img src="images/udemy.png" alt="Udemy logo">
                     </a>
                 </li>
                 <li class="course">
                     <span>freeCodeCamp</span>
                     <p>Front End Development Certification</p>
                     <a href="https://www.freecodecamp.com/" target="_blank">
-                        <img src="images/freecodecamp.jpeg">
+                        <img src="images/freecodecamp.jpeg" alt="freeCodeCamp logo">
                     </a>
                 </li>
             </ul>
