Resize some pictures
Adjust some contexts.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Jane Smith's Profile</title>
+  <title>Henry Chien's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
@@ -19,7 +19,7 @@
     </div>
 
     <header>
-      <img src="images/me.png" alt="My profile photo" class="profile-image">
+      <img src="images/me.jpg" alt="My profile photo" class="profile-image">
       <h1 class="tag name">Hello, I’m Henry.</h1>
       <p class="tag location">My home is Taipei, Taiwan.</p>
     </header>
@@ -33,13 +33,13 @@
 
         <div class="card">
             <h2>Goals</h2>
-            <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+            <p>Enable to become a front-end web developer, I want to increase my knowledge, skills and abilities in:</p>
             <ul class="skills">
               <li>HTML</li>
               <li>CSS</li>
               <li>JavaScript</li>
             </ul>
-            <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+            <p>I’d like to work for a web design firm helping clients create an impressive online presence. And I also want to learn some UI/UX skills to gain my experience in the future</p>
         </div> 
     </main>
     
