--- a/experience.html
+++ b/experience.html
@@ -14,12 +14,12 @@
         <ul class="nav">
           <li class="name">Henry Chien</li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Experience</a></li>
+          <li><a href="experience.html">Experience</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/me.png" alt="My profile photo" class="profile-image">
+      <img src="images/me.jpg" alt="My profile photo" class="profile-image">
       <h1 class="tag name">Hello, I’m Henry.</h1>
       <p class="tag location">My home is Taipei, Taiwan.</p>
     </header>
